--- a/prepros.config
+++ b/prepros.config
@@ -914,13 +914,28 @@
       {
         "file": "#source/js/main.js",
         "config": {
-          "autoCompile": true
+          "autoCompile": true,
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          }
         }
       },
       {
         "file": "#source/js/vendors.js",
         "config": {
           "autoCompile": true
+        }
+      },
+      {
+        "file": "js/main.js",
+        "config": {
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          }
         }
       }
     ]
